# faseal

./: Cargo.toml  README.md  SPECIFICATIONS.md
faseal-cli/: Cargo.toml
faseal-cli/src/: main.rs
faseal-core/: Cargo.toml
faseal-core/src/: archive.rs  config.rs  errors.rs  identities.rs  lib.rs  utils.rs
faseal-crypto/: Cargo.toml
faseal-crypto/src/: aead.rs  argon2.rs  array.rs  curve25519.rs  ed25519.rs  hashes.rs  kem.rs  lib.rs  ml_dsa.rs  ml_kem.rs  sig.rs  traits.rs
faseal-crypto/src/aead/: chacha20.rs  poly1305.rs
faseal-crypto/src/curve25519/: base.rs  field.rs  points.rs  scalar.rs  scalarmult.rs
faseal-crypto/src/hashes/: blake2.rs  sha3.rs  sha512.rs
faseal-crypto/src/ml_dsa/: fq.rs  internals.rs  poly.rs  polyvec.rs
faseal-crypto/src/ml_kem/: fq.rs  pke.rs  poly.rs  polyvec.rs
faseal-crypto/src/traits/: arrayt.rs  kemt.rs  sigt.rs
faseal-crypto/tests/: blake2b-kat.txt  ml_dsa_65_keygen.txt  ml_dsa_65_sign_external.txt  ml_dsa_65_sign_external_det.txt  ml_dsa_65_sign_internal.txt  ml_dsa_65_sign_internal_det.txt  ml_dsa_65_verify_external.txt  ml_dsa_65_verify_internal.txt  ml_dsa_keygen.txt  ml_kem_768_decaps.txt  ml_kem_768_encaps.txt  ml_kem_768_keygen.txt
