[workspace]
resolver = "2"
members = [
    "faseal-cli",
    "faseal-core",
    "faseal-crypto"
]

[workspace.package]
version = "0.1.3"
authors = ["A. Russon"]
description = "FaSEAL: a simple encryption tool"
edition = "2024"

[profile.release]
opt-level = 2
strip = true
panic = "abort"
lto = true

[workspace.dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"]}
secrecy = { version = "0.10.3", default-features = false }
subtle = { version = "2.6.1", default-features = false }
zeroize = { version = "1.8.1", default-features = false, features = ["zeroize_derive"]}
hex-literal = { version = "1.0.0", default-features = false }

