[package]
name = "faseal"
version = "0.1.1"
edition = "2024"

[dependencies]
rpassword = { version = "7.3.1", default-features = false }
faseal-core = { version = "0.1.1", path="../faseal-core" }
faseal-crypto = { version = "0.1.0", path="../faseal-crypto" }
secrecy = { workspace = true }
hex = { workspace = true }
clap = "4.5.45"
