[package]
name = "faseal"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
faseal-core.path = "../faseal-core"
faseal-crypto.path = "../faseal-crypto"
clap = "4.5.46"
hex.workspace = true
rpassword = { version = "7.3.1", default-features = false }
secrecy.workspace = true
