[package]
name = "faseal-core"
version.workspace = true
authors.workspace = true
description = "FaSEAL internals"
edition.workspace = true

[dependencies]
faseal-crypto.path = "../faseal-crypto"
brotli = { version = "8.0.2", default-features = false, features = ["std"] }
dirs = { version = "6.0.0", default-features = false }
hex.workspace = true
rand.workspace = true
secrecy.workspace = true
subtle.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex-literal.workspace = true
tempfile = "3.21.0"
