[package]
name = "faseal-crypto"
version.workspace = true
authors.workspace = true
description  = "FaSEAL cryptographic primitives"
edition.workspace = true

[dependencies]
rand.workspace = true
secrecy.workspace = true
subtle.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
